# zhaw-snp-labs

./: .gitignore  CMakeLists.txt  Doxyfile  Lab01_01.c  Lab01_03.c  Lab02_02.c  Makefile  README.md  conf.py  index.rst  lab01_03.c  lab01_04.c  shared.mk  sphinx.mk
.devcontainer/: Dockerfile  devcontainer.json
P01_Erste_Schritte_mit_C/: Lab01_01.c  Lab01_02.c  Lab01_03.c  README.md
P02_Funktionen_Datentyp_enum/: README.md
P02_Funktionen_Datentyp_enum/work/wochentag-berechnung/: Makefile
P03_Bit_Operation_struct_typedef/: Lab03_01.c  Lab03_02.c  Lab03_04.c  Lab03_05.c  Lab03_06.c  README.md  bin_calculator.c  simple_shapes.c
P04_Modularisieren_von_C_Code/: README.md
P05_TicTacToe/: MVC_Pattern.uxf  P05_TicTacToe.rst  README.md
P05_TicTacToe/sort/: Lab05_01.c
P06_Personen_Verwaltung_Linked_List/: README.md  linked_list.uxf
P07_Prozesse_und_Threads/: README.blg  README.md  README_P02.md
P08_Sync/: P10.uxf  README.md
P09_File_Operations/: README.md
P09_File_Operations/personen-verwaltung-persistent/: Makefile
P10_IPC/: Makefile  README.md
P10_IPC/src/: list.c  list.h  person.c  person.h  person_client.c  person_server.c  snp_error_handler.c  snp_error_handler.h  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h
P11_Bash/: README.md
P11_Bash/code/: bkp.sh  disk-usage-of-home.sh  get-exec-list-arg.sh  tab2html.sh  tab2xml.sh
lab02/: Lab02_02.c
lab03/: Lab03_01.c  Lab03_04.c  Lab03_05.c  Lab03_06.c
testlib/: Makefile  mainpage.dox
testlib/include/: test_utils.h
testlib/src/: test_utils.c
testlib/tests/: tests.c
(+131 files in other folders)
