cmake_minimum_required(VERSION 3.28)
project(zhaw_snp_labs C)

set(CMAKE_C_STANDARD 11)

add_executable(lab01_01 lab01/Lab01_01.c)
add_executable(lab01_02 lab01/Lab01_02.c)
add_executable(lab01_03 lab01/Lab01_03.c)
add_executable(lab02_01 lab02/lab02_01.c)
add_executable(lab02_02 lab02/lab02_02.c)
add_executable(lab03_01 lab03/lab03_01.c)
add_executable(lab03_02 lab03/lab03_02.c)
add_executable(lab03_04 lab03/lab03_04.c)
add_executable(lab03_05 lab03/lab03_05.c)
add_executable(lab03_06 lab03/lab03_06.c)
