cmake_minimum_required(VERSION 3.28)
project(snp_labs C)

set(CMAKE_C_STANDARD 11)

add_executable(lab01_01 P01_Erste_Schritte_mit_C/Lab01_01.c)
add_executable(lab01_02 P01_Erste_Schritte_mit_C/Lab01_02.c)
add_executable(lab01_03 P01_Erste_Schritte_mit_C/Lab01_03.c)
add_executable(lab05_01 P05_TicTacToe/sort/Lab05_01.c)
